dh-make-perl (0.81-1) UNRELEASED; urgency=medium

  [ Dima Kogan ]
  * If I can't parse pkgname or version, quit with a useful error message.
    Before this patch, perl would throw up errors about trying to do stuff
    with uninitialized variables. Now it says things like "Unable to
    determine dist name. Please use --packagename"
  * Replaced all 'start_dir' uses with 'main_dir' start_dir is the pwd
    when we run dh_make_perl; main_dir is the (directory given on the
    cmdline) || '.' We never actually want to use the start_dir. Prior to
    this patch  dh-make-perl /some/path/ would look for a source tarball
    in '.', which is clearly wrong for that command.

  [ gregor herrmann ]
  * DhMakePerl::Command::Packaging:
    - install CONTRIBUTING files in extract_docs().
    - require debhelper 9.20120312 only for arch:any packages;
      for arch:all debhelper 8 or 9 are enough
    - add a trailing ~ to all versioned dependencies to make
      backporting easier
    - drop special casing for all kinds of dependencies which needed
      debhelper 7.x.
      Support for debhelper < 8 was dropped in dh-make-perl 0.77.
  * Reword "debhelper(1) 7 tiny" to the more accurate "dh(1)".
    Also rename is_dh7tiny() method to is_dhtiny().
  * Update copyright years.

  [ Axel Beckert ]
  * Apply wrap-and-sort.

 -- Dima Kogan <dima@secretsauce.net>  Wed, 25 Dec 2013 17:08:35 +0100

dh-make-perl (0.80-1) unstable; urgency=low

  [ CSILLAG Tamas ]
  * add Homepage to d/control (lintian check suggested)
  * add rename_to_debian_package_dir.
    This will rename the directory name to the canonical name of
    the debian package.
  * use system("mv ...") when cross device directory move is expected
    otherwise just use rename

  [ Damyan Ivanov ]
  * FromCPAN/find_debs_for_modules: do not crash when all offerred packages
    are perl(-(modules|base))? (Closes: #725206)
  * drop trailing slash from t/Control.t test file

  [ Salvatore Bonaccorso ]