@@ -749,10 +749,15 @@ sub git_add_debian {
             $self->pkgname ),
     ) if $self->cfg->pkg_perl;
 
-    if ( File::Which::which('pristine-tar') and $tarball ) {
-        $ENV{GIT_DIR} = File::Spec->catdir( $self->main_dir, '.git' );
-        system( 'pristine-tar', 'commit', $tarball, "upstream/".$self->version ) >= 0
-            or warn "error running pristine-tar: $!\n";
+    if ( File::Which::which('pristine-tar') ) {
+        if ( $tarball and -f $tarball ) {
+            $ENV{GIT_DIR} = File::Spec->catdir( $self->main_dir, '.git' );
+            system( 'pristine-tar', 'commit', $tarball, "upstream/".$self->version ) >= 0
+                or warn "error running pristine-tar: $!\n";
+        }
+        else {
+            die "No tarball found to handle with pristine-tar. Bailing out."
+        }
     }
     else {
         warn "W: pristine-tar not available. Please run\n";
