@@ -1,5 +1,8 @@
 dh-make-perl (0.81-1) UNRELEASED; urgency=medium
 
+  TODO: Verify fix for #735968 after submitter has reported an example
+    module to reproduce
+
   [ Dima Kogan ]
   * If I can't parse pkgname or version, quit with a useful error message.
     Before this patch, perl would throw up errors about trying to do stuff
@@ -27,6 +30,8 @@ dh-make-perl (0.81-1) UNRELEASED; urgency=medium
 
   [ Axel Beckert ]
   * Apply wrap-and-sort.
+  * Untangle checks for pristine-tar and upstream tarball in
+    git_add_debian() (Closes: #735968)
 
  -- Dima Kogan <dima@secretsauce.net>  Wed, 25 Dec 2013 17:08:35 +0100
 
